--- a/app/src/main/res/layout/professor.xml
+++ b/app/src/main/res/layout/professor.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jhacks.vrclassroom.MainActivity">
+    tools:context="com.jhacks.vrclassroom.Professor">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,22 +13,11 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/professor"
+            android:id="@+id/startSes"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            android:text="Professor"
-            android:textAlignment="textStart"
-            android:textAllCaps="false"
-            android:textSize="24sp" />
-
-        <Button
-            android:id="@+id/student"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            android:text="Student"
-            android:textAlignment="textStart"
+            android:layout_marginTop="20dp"
+            android:text="Start Session"
             android:textAllCaps="false"
             android:textSize="24sp" />
     </LinearLayout>
