--- a/app/src/main/res/layout/prof_session.xml
+++ b/app/src/main/res/layout/prof_session.xml
@@ -12,17 +12,7 @@
         <FrameLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/subscriber_container" />
-        <FrameLayout
-            android:layout_width="90dp"
-            android:layout_height="120dp"
-            android:id="@+id/publisher_container"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:padding="2dp"
-            android:background="#FFFFFF" />
+            android:id="@+id/publisher_container" />
     </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
