Same as before, added modified files

--- a/app/src/main/res/layout/stud_session.xml
+++ b/app/src/main/res/layout/stud_session.xml
@@ -7,23 +7,30 @@
     tools:context="com.jhacks.vrclassroom.StudSession">
 
 
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <FrameLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/subscriber_container" />
-        <FrameLayout
-            android:layout_width="90dp"
-            android:layout_height="120dp"
-            android:id="@+id/publisher_container"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:padding="2dp"
-            android:background="#FFFFFF" />
-    </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <com.google.vr.sdk.widgets.video.VrVideoView
+            android:id="@+id/video_view"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"/>
+
+        <SeekBar
+            android:id="@+id/seek_bar"
+            android:layout_height="32dp"
+            android:layout_width="match_parent"
+            style="?android:attr/progressBarStyleHorizontal"/>
+
+        <Button
+            android:id="@+id/btn_volume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Volume Toggle"/>
+
+
+
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
