--- a/app/src/main/res/layout/professor.xml
+++ b/app/src/main/res/layout/professor.xml
@@ -12,6 +12,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/profSesId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:ems="10"
+            android:hint="Session ID"
+            android:inputType="textPersonName"
+            android:textSize="24sp" />
+
         <Button
             android:id="@+id/startSes"
             android:layout_width="match_parent"
