--- a/app/src/main/res/layout/student.xml
+++ b/app/src/main/res/layout/student.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:ems="10"
-            android:hint="Session ID"
+            android:hint="Class Name"
             android:inputType="textPersonName"
             android:textSize="24sp" />
 
