--- a/app/src/main/res/layout/stud_session.xml
+++ b/app/src/main/res/layout/stud_session.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.jhacks.vrclassroom.StudSession">
 
+    <TextView
+        android:id="@+id/notCon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Not Connected"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"/>
+
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
