added a way for a question to be passed to all students

--- a/app/src/main/res/layout/prof_session.xml
+++ b/app/src/main/res/layout/prof_session.xml
@@ -18,6 +18,14 @@
         android:layout_height="wrap_content"
         android:text="switch camera"
         android:onClick="onClickSendMessage"
+        app:layout_constraintBottom_toTopOf="@id/button3"/>
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="More"
+        android:onClick="onClickMore"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
