--- a/app/src/main/res/layout/activity_ask_question.xml
+++ b/app/src/main/res/layout/activity_ask_question.xml
@@ -4,23 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jhacks.vrclassroom.AskQuestion">
+    tools:context="com.jhacks.vrclassroom.AskQuestion"
+    android:background="@color/colorPrimaryDark">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-
 
         <EditText
             android:id="@+id/questionText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:textSize="20sp"
+            android:hint="Question"
             android:inputType="textPersonName"
-            android:hint="Question" />
+            android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,8 +31,8 @@
                 android:id="@+id/textViewA"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="A" />
+                android:text="A"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editTextA"
@@ -40,19 +40,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="Choice A" />
+                android:hint="Choice A"
+                android:inputType="textPersonName" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/textViewB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="B" />
+                android:text="B"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editTextB"
@@ -60,19 +62,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="Choice B" />
+                android:hint="Choice B"
+                android:inputType="textPersonName" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/textViewC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="C" />
+                android:text="C"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editTextC"
@@ -80,19 +84,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="Choice C" />
+                android:hint="Choice C"
+                android:inputType="textPersonName" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/textViewD"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="D" />
+                android:text="D"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editTextD"
@@ -100,22 +106,31 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="Choice D" />
-
+                android:hint="Choice D"
+                android:inputType="textPersonName" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            android:textSize="24sp"
-            android:text="Send question"
-            android:onClick="sendQuestion"/>
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="150dp"
+        android:layout_height="145dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        android:contentDescription="@null"
+        app:srcCompat="@drawable/googledaydream" />
 
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:background="@drawable/qst"
+        android:onClick="sendQuestion"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
