--- a/app/src/main/res/layout/stud_session.xml
+++ b/app/src/main/res/layout/stud_session.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jhacks.vrclassroom.StudSession">
+    tools:context="com.jhacks.vrclassroom.StudSession"
+    android:background="@color/colorPrimaryDark">
 
     <TextView
         android:id="@+id/notCon"
